--- a/code/questionnaire/pom.xml
+++ b/code/questionnaire/pom.xml
@@ -158,7 +158,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>4.3.8.RELEASE</version>
+			<version>${spring.core.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -198,11 +198,6 @@
 		</dependency>
 
 
-    <dependency>
-        <groupId>org.springframework.data</groupId>
-        <artifactId>spring-data-mongodb</artifactId>
-        <version>1.10.3.RELEASE</version>
-    </dependency>
 
 		<!-- Struts2 -->
 		<dependency>
@@ -228,18 +223,19 @@
 			<version>${xwork.core.version}</version>
 		</dependency>
 		
-		<dependency>
-       <groupId>org.apache.struts</groupId>
-       <artifactId>struts2-json-plugin</artifactId>
-       <version>${struts.core.version}</version>
-   		</dependency>
-   		
+
    		<!-- MongoDB -->
-   		<dependency>
-        <groupId>org.mongodb</groupId>
-        <artifactId>mongodb-driver</artifactId>
-        <version>3.4.2</version>
-    </dependency>
+   		<dependency>  
+            <groupId>org.springframework.data</groupId>  
+            <artifactId>spring-data-mongodb</artifactId>  
+            <version>1.8.2.RELEASE</version>  
+        </dependency>  
+        <dependency>  
+            <groupId>org.springframework.data</groupId>  
+            <artifactId>spring-data-commons</artifactId>  
+            <version>1.10.0.RELEASE</version>  
+        </dependency>  
+
 		<!-- Javax Servlet -->
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -272,8 +268,8 @@
 					<path>/${project.artifactId}</path>
 					<uriEncoding>${project.build.sourceEncoding}</uriEncoding>
 					<server>tomcat7</server>
-					<username>tomcat</username>
-					<password>password</password>
+					<username>admin</username>
+					<password>tomcat</password>
 				</configuration>
 			</plugin>
 
