--- a/code/questionnaire/pom.xml
+++ b/code/questionnaire/pom.xml
@@ -197,7 +197,14 @@
 			<version>${slf4j.version}</version>
 		</dependency>
 
-
+<!-- https://mvnrepository.com/artifact/jfree/jfreechart -->
+<!-- for drawing pictures -->
+<dependency>
+    <groupId>jfree</groupId>
+    <artifactId>jfreechart</artifactId>
+    <version>1.0.13</version>
+</dependency>
+		
 
 		<!-- Struts2 -->
 		<dependency>
