--- a/code/questionnaire/src/main/webapp/WEB-INF/web.xml
+++ b/code/questionnaire/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,37 @@
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
+  
+      <filter>
+  	<filter-name>SessionFilter</filter-name>
+  	<filter-class>filter.SessionFilter</filter-class>
+  	<init-param>
+  		<param-name>loginStrings</param-name>
+  		<param-value>/HelpContact;/FrontPage;/loginPro;/signupPro;/signupPage;/loginPage;/searchPro;/FillQuestionnaire;</param-value>
+  	</init-param>
+  	<init-param>
+  		<param-name>adminStrings</param-name>
+  		<param-value>;/allUser;/allQuestionnaire;</param-value>
+  	</init-param>
+  	<init-param>
+  		<param-name>includeStrings</param-name>
+  		<param-value>.do;.jsp;Pro;MyQuestionnaire;</param-value>
+  	</init-param>	
+  	<init-param>
+  		<param-name>redirectPath</param-name>
+  		<param-value>/FrontPage</param-value>
+  	</init-param>
+  	<init-param>
+  		<param-name>diabletestfilter</param-name>
+  		<param-value>N</param-value>
+  	</init-param>
+  </filter>
+  <filter-mapping>
+  	<filter-name>SessionFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  
   <filter>
     <filter-name>struts2</filter-name>
     <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsPrepareAndExecuteFilter</filter-class>
