--- a/code/questionnaire/pom.xml
+++ b/code/questionnaire/pom.xml
@@ -250,6 +250,32 @@
 			<version>${javax.servlet-api.version}</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!--  Email activate -->
+		<dependency>
+    <groupId>javax.mail</groupId>
+    <artifactId>javax.mail-api</artifactId>
+    <version>1.5.3</version>
+	</dependency>
+	<dependency>
+    <groupId>com.sun.mail</groupId>
+    <artifactId>javax.mail</artifactId>
+    <version>1.5.3</version>
+	</dependency>
+	
+	
+	<!--  chart  -->
+	<dependency>
+    <groupId>org.jfree</groupId>
+    <artifactId>jcommon</artifactId>
+    <version>1.0.23</version>
+</dependency>
+<dependency>
+    <groupId>org.jfree</groupId>
+    <artifactId>jfreechart</artifactId>
+    <version>1.0.19</version>
+</dependency>
+		
 
 	</dependencies>
 	<build>
@@ -275,8 +301,8 @@
 					<path>/${project.artifactId}</path>
 					<uriEncoding>${project.build.sourceEncoding}</uriEncoding>
 					<server>tomcat7</server>
-					<username>tomcat</username>
-					<password>password</password>
+					<username>admin</username>
+					<password>tomcat</password>
 				</configuration>
 			</plugin>
 
