--- a/code/questionnaire/pom.xml
+++ b/code/questionnaire/pom.xml
@@ -274,7 +274,12 @@
     <artifactId>jfreechart</artifactId>
     <version>1.0.19</version>
 </dependency>
-		
+<!-- https://mvnrepository.com/artifact/net.sf.jacob-project/jacob -->
+<dependency>
+    <groupId>net.sf.jacob-project</groupId>
+    <artifactId>jacob</artifactId>
+    <version>1.14.3</version>
+</dependency>
 
 	</dependencies>
 	<build>
