--- a/code/questionnaire/src/main/webapp/WEB-INF/web.xml
+++ b/code/questionnaire/src/main/webapp/WEB-INF/web.xml
@@ -14,11 +14,11 @@
   	<filter-class>filter.SessionFilter</filter-class>
   	<init-param>
   		<param-name>loginStrings</param-name>
-  		<param-value>/HelpContact;/FrontPage;/loginPro;/signupPro;/signupPage;/loginPage;/searchPro;/FillQuestionnaire;/addAnswer;/getQuestionnaire</param-value>
+  		<param-value>/activatemail;/HelpContact;/FrontPage;/loginPro;/signupPro;/signupPage;/loginPage;/searchPro;/FillQuestionnaire;/addAnswer;/getQuestionnaire</param-value>
   	</init-param>
   	<init-param>
   		<param-name>adminStrings</param-name>
-  		<param-value>;/allUser;/allQuestionnaire;</param-value>
+  		<param-value>/allUser;/allQuestionnaire;</param-value>
   	</init-param>
   	<init-param>
   		<param-name>includeStrings</param-name>
